--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -33,7 +33,9 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
+    {% block meta_viewport %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% endblock meta_viewport %}
 
 <!--
     ==================
