Moves interacrive strategic plan.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10600,6 +10600,10 @@ a.category-slug.active {
 .icon-link__right.icon-link__before:before {
   content: "\e002";
 }
+.icon-link__chart:after,
+.icon-link__chart.icon-link__before:before {
+  content: "\e638";
+}
 .icon-link__before:after {
   content: '';
 }
@@ -10737,6 +10741,10 @@ a.category-slug.active {
 .jump-link__right:after,
 .jump-link__right.jump-link__before:before {
   content: "\e002";
+}
+.jump-link__chart:after,
+.jump-link__chart.jump-link__before:before {
+  content: "\e638";
 }
 .jump-link__before:after {
   content: '';
@@ -11549,11 +11557,7 @@ a.category-slug.active {
 a:hover .summary_header,
 a.hover .summary_header,
 a:focus .summary_header,
-a.focus .summary_header,
-button:hover .summary_header,
-button.hover .summary_header,
-button:focus .summary_header,
-button.focus .summary_header {
+a.focus .summary_header {
   color: #328ed8;
 }
 .summary_header em,
