--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -211,6 +211,12 @@
         content: "\e002";
     }
 
+    &__chart:after,
+    &__chart&__before:before {
+        // Inserts the cf-icon-chart glyph.
+        content: "\e638";
+    }
+
     // New icon modifiers must be added ABOVE this line.
 
     &__before {
