Adds pdf link and makes new icon link with pdf icon.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10600,6 +10600,10 @@ a.category-slug.active {
 .icon-link__right.icon-link__before:before {
   content: "\e002";
 }
+.icon-link__pdf:after,
+.icon-link__pdf.icon-link__before:before {
+  content: "\e402";
+}
 .icon-link__chart:after,
 .icon-link__chart.icon-link__before:before {
   content: "\e638";
@@ -10741,6 +10745,10 @@ a.category-slug.active {
 .jump-link__right:after,
 .jump-link__right.jump-link__before:before {
   content: "\e002";
+}
+.jump-link__pdf:after,
+.jump-link__pdf.jump-link__before:before {
+  content: "\e402";
 }
 .jump-link__chart:after,
 .jump-link__chart.jump-link__before:before {
