Style imported wordpress content on budget pages.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10592,6 +10592,10 @@ a.category-slug.active {
 .icon-link__mail.icon-link__before:before {
   content: "\e304";
 }
+.icon-link__pdf:after,
+.icon-link__pdf.icon-link__before:before {
+  content: "\e402";
+}
 .icon-link__phone:after,
 .icon-link__phone.icon-link__before:before {
   content: "\e306";
@@ -10729,6 +10733,10 @@ a.category-slug.active {
 .jump-link__mail:after,
 .jump-link__mail.jump-link__before:before {
   content: "\e304";
+}
+.jump-link__pdf:after,
+.jump-link__pdf.jump-link__before:before {
+  content: "\e402";
 }
 .jump-link__phone:after,
 .jump-link__phone.jump-link__before:before {
@@ -15654,6 +15662,9 @@ button.focus .summary_header {
     top: 39px;
   }
 }
+.budget_page-content h4 {
+  margin-top: 30px;
+}
 .budget_page-content ul {
   padding-left: 0;
   list-style-type: none;
@@ -15727,8 +15738,13 @@ button.focus .summary_header {
   }
 }
 .budget_page-content ul li a {
-  position: relative;
   left: -0.125em;
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1em;
+  border-bottom-width: 0;
+  position: relative;
 }
 @media only all and (max-width: 37.4375em) {
   .budget_page-content ul li a {
@@ -15753,6 +15769,133 @@ button.focus .summary_header {
   .budget_page-content ul li a .icon-link_text {
     border-bottom-width: 0;
   }
+}
+.lt-ie9 .budget_page-content ul li a {
+  font-weight: normal !important;
+}
+.budget_page-content ul li a_text {
+  border-bottom-width: 1px;
+  border-bottom-style: inherit;
+}
+.budget_page-content ul li a:before,
+.budget_page-content ul li a:after {
+  font-family: 'CFPB Minicons';
+  display: inline-block;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  margin-right: 1px;
+  margin-left: 1px;
+}
+.budget_page-content ul li a__download:after,
+.budget_page-content ul li a__download.budget_page-content ul li a__before:before {
+  content: "\e406";
+}
+.budget_page-content ul li a__email:after,
+.budget_page-content ul li a__email.budget_page-content ul li a__before:before {
+  content: "\e302";
+}
+.budget_page-content ul li a__external-link:after,
+.budget_page-content ul li a__external-link.budget_page-content ul li a__before:before {
+  content: "\e610";
+}
+.budget_page-content ul li a__fax:after,
+.budget_page-content ul li a__fax.budget_page-content ul li a__before:before {
+  content: "\e310";
+}
+.budget_page-content ul li a__left:after,
+.budget_page-content ul li a__left.budget_page-content ul li a__before:before {
+  content: "\e000";
+}
+.budget_page-content ul li a__mail:after,
+.budget_page-content ul li a__mail.budget_page-content ul li a__before:before {
+  content: "\e304";
+}
+.budget_page-content ul li a__pdf:after,
+.budget_page-content ul li a__pdf.budget_page-content ul li a__before:before {
+  content: "\e402";
+}
+.budget_page-content ul li a__phone:after,
+.budget_page-content ul li a__phone.budget_page-content ul li a__before:before {
+  content: "\e306";
+}
+.budget_page-content ul li a__right:after,
+.budget_page-content ul li a__right.budget_page-content ul li a__before:before {
+  content: "\e002";
+}
+.budget_page-content ul li a__before:after {
+  content: '';
+}
+.budget_page-content ul li a__no-wrap {
+  white-space: nowrap;
+}
+.budget_page-content ul li a__large {
+  font-size: 1.125em;
+}
+@media only all and (max-width: 37.4375em) {
+  .budget_page-content ul li a {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: block;
+    padding: 0.625em 1.25em 0.625em 0;
+    border: dotted #0072ce;
+    border-width: 1px 0;
+    margin-right: 0;
+    width: 100%;
+    text-align: left;
+  }
+  .budget_page-content ul li a:after {
+    position: absolute;
+    margin-bottom: -0.625em;
+    right: 0;
+    bottom: 50%;
+    text-align: right;
+  }
+  .budget_page-content ul li a_text {
+    border-bottom-width: 0;
+  }
+  .budget_page-content ul li a__bg {
+    background: #f1f2f2;
+    border: solid #e3e4e5;
+    border-width: 1px 0;
+    padding: 0.625em 1.25em 0.625em 1em;
+  }
+  .budget_page-content ul li a__bg:after {
+    right: 1em;
+  }
+}
+.budget_page-content.financial-report a:before,
+.budget_page-content.performance-plan a:before,
+.budget_page-content.funding-request a span:before {
+  font-family: 'CFPB Minicons';
+  display: inline-block;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  content: "\e402";
+  margin-right: .5em;
+  color: #101820;
+}
+.budget_page-content.funding-request h4 {
+  margin-top: 2.1875em;
+}
+.budget_page-content.funding-request a span {
+  color: #101820;
+  padding-right: .5em;
+}
+@media only all and (min-width: 64em) {
+  .budget_page-content.funding-request a span {
+    float: left;
+    width: 12em;
+  }
+}
+.budget_page-content.performance-plan sub {
+  display: block;
+  margin-top: -0.625em;
+  margin-bottom: 3.75em;
 }
 .bureau-mission {
   margin-bottom: 2.8125em;
