--- a/static/css/budget.less
+++ b/static/css/budget.less
@@ -1,5 +1,9 @@
 .budget_page-content {
     
+    h4 {
+        margin-top: @grid_gutter-width;
+    }
+    
     ul {
       .list__unstyled();
       .list__links();
@@ -10,8 +14,44 @@
           
           a {
               .list_link();
+              .jump-link();
           }
       }
     }
+    
+    &.financial-report a, 
+    &.performance-plan a,
+    &.funding-request a span{
+        &:before {
+            .cf-icon();
+            content: "\e402";
+            margin-right: .5em;
+            color: @black;
+        }
+    }
+    
+    &.funding-request {
+        h4 {
+            margin-top: unit(35px / @base-font-size-px, em);
+        }
+            
+        a span {
+            color: @black;
+            padding-right: .5em;
+
+            .respond-to-min(1024px, {
+                float: left;
+                width: 12em;
+            });
+        }
+    }
+    
+    &.performance-plan {  
+        sub {
+            display: block;
+            margin-top: unit(-10px / @base-font-size-px, em);
+            margin-bottom: unit(@grid_gutter-width * 2 / @base-font-size-px, em);
+        }
+    }  
     
 }
