--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -199,6 +199,12 @@
         content: "\e304";
     }
 
+    &__pdf:after,
+    &__pdf&__before:before {
+        // Inserts the cf-icon-pdf glyph.
+        content: "\e402";
+    }
+
     &__phone:after,
     &__phone&__before:before {
         // Inserts the cf-icon-phone glyph.
@@ -1064,7 +1070,7 @@
     &__7:before { content: '7'; }
     &__8:before { content: '8'; }
     &__9:before { content: '9'; }
-    &__0:before { content: '9'; }
+    &__0:before { content: '0'; }
     &__A:before { content: 'A'; }
     &__B:before { content: 'B'; }
     &__C:before { content: 'C'; }
