--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -11178,6 +11178,11 @@ a.category-slug.active {
   content: "\e304";
 }
 
+.icon-link__pdf:after,
+.icon-link__pdf.icon-link__before:before {
+  content: "\e402";
+}
+
 .icon-link__phone:after,
 .icon-link__phone.icon-link__before:before {
   content: "\e306";
@@ -11332,6 +11337,11 @@ a.category-slug.active {
 .jump-link__mail:after,
 .jump-link__mail.jump-link__before:before {
   content: "\e304";
+}
+
+.jump-link__pdf:after,
+.jump-link__pdf.jump-link__before:before {
+  content: "\e402";
 }
 
 .jump-link__phone:after,
@@ -12180,7 +12190,7 @@ a.hero_card {
 
 .char-icon__0:before,
 .step-slug__0:before {
-  content: '9';
+  content: '0';
 }
 
 .char-icon__A:before,
