Adds budget and working with us to the nav.

--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -40,6 +40,12 @@
                             <li class="list_item list-expanding_list-item">
                                 <a class="list_link" href="/activity-log/">Activity Log</a>
                             </li>
+                            <li class="list_item list-expanding_list-item">
+                                <a class="list_link" href="/budget/">Budget and Strategy</a>
+                            </li>
+                            <li class="list_item list-expanding_list-item">
+                                <a class="list_link" href="/doing-business-with-us/">Working with Us</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
